--- a/front-proyecto-DAW1/package.json
+++ b/front-proyecto-DAW1/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "axios": "^1.5.0",
+        "bootstrap": "^5.3.1",
+        "phosphor-react": "^1.4.1",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.8.0",
+        "react-dom": "^18.2.0",
+        "react-icon": "^1.0.0",
+        "react-router-dom": "^6.15.0",
+        "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
